Fix align justify

--- a/core/src/plugins/gui.ajax/res/themes/material/css/pydio.css
+++ b/core/src/plugins/gui.ajax/res/themes/material/css/pydio.css
@@ -8079,6 +8079,7 @@ span.overlay-class-span.icon-bookmark-empty {
   padding: 16px 4px 16px !important;
   background-color: #2196f3;
   align-items: flex-start;
+  justify-content: center;
 }
 #info_panel .panelCard .primaryToolbar .mui-flat-button {
   min-width: 0;
