--- a/core/src/plugins/gui.ajax/res/themes/material/css/widgets.less
+++ b/core/src/plugins/gui.ajax/res/themes/material/css/widgets.less
@@ -193,6 +193,7 @@
       padding: 16px 4px 16px !important;
       background-color: @primary-bar-color;
       align-items: flex-start;
+      justify-content: center;
       .mui-flat-button{
         min-width: 0;
         .mui-flat-button-label{
